--- a/tests/integration/navigation/sequence/sequence-redirect.html
+++ b/tests/integration/navigation/sequence/sequence-redirect.html
@@ -16,6 +16,7 @@
 	<script src="../../../jquery.setNameSpace.js"></script>
 	<script src="../../../jquery.testHelper.js"></script>
 	<script src="../../../../external/qunit/qunit.js"></script>
+	<link rel="stylesheet" href="../../../jqm-tests.css"/>
 	<script>
 		$.testHelper.asyncLoad([
 			[
